--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.87.1",
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.13.4",
+    "@fontsource/inter": "^5.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
